--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+#files
+Ba-etal/
+Grupo_03/data3/sample_report_D03.html
+Grupo_03/data3/sample_report_D03_X.html
+coments.xlsx
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
